--- a/app/views/offerings/index.html.erb
+++ b/app/views/offerings/index.html.erb
@@ -3,7 +3,7 @@
   <div class="cards">
     <% @offerings.each do |offering| %>
       <%= link_to offering_path(oferring) do %>
-        <%= oferring.name %>
+        <%= offerring.name %>
       <% end %>
     <% end %>
   </div>
