--- a/app/views/offerings/index.html.erb
+++ b/app/views/offerings/index.html.erb
@@ -2,7 +2,7 @@
   <h1>Musician</h1>
   <div class="cards">
     <% @offerings.each do |offering| %>
-      <%= link_to offering_path(oferring) do %>
+      <%= link_to offering_path(offerring) do %>
         <%= offerring.name %>
       <% end %>
     <% end %>
