Added controller actions for creating new bookings

--- a/app/views/offerings/show.html.erb
+++ b/app/views/offerings/show.html.erb
@@ -1,3 +1,6 @@
 <div class="container mt-3">
-<h1>This is the Offering Headline</h1>
+  <h1>This is the Offering Headline</h1>
+  <%= simple_form_for(@booking) do |f| %>
+    <%= f. %>
+  <% end %>
 </div>
