--- a/app/views/offerings/_form.html.erb
+++ b/app/views/offerings/_form.html.erb
@@ -1,5 +1,4 @@
 <%= simple_form_for @offering do |f| %>
   <%= f.input :price %>
-  <%#= f.input :species, collection: Pet::SPECIES %>
-  <%= f.submit class: 'btn btn-primary mt-2' %>
+  <%= f.submit "Search", class: 'btn btn-primary mt-2' %>
 <% end %>
