--- a/app/views/offerings/show.html.erb
+++ b/app/views/offerings/show.html.erb
@@ -1,7 +1,7 @@
 <div class="container show-main" mt-3">
   <div>
     <div class="cards-show">
-      <div class="card-trip">
+      <div class="card-trip card-show-page">
         <img src="https://roadtovrlive-5ea0.kxcdn.com/wp-content/uploads/2015/03/youtube-logo2.jpg" />
         <div class="card-trip-infos">
           <div>
@@ -12,7 +12,7 @@
         </div>
       </div>
     </div>
-    <div class="card-trip">
+    <div class="card-trip card-show-page">
       <ul>
         <li>Location: <%= @offering.user.city %></li>
         <li>Instruments: <%= @offering.instrument %></li>
