--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,6 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://cdn.mos.cms.futurecdn.net/FMDLnag2wKogGCLLr8sGtZ-970-80.png.webp);">
+  <div class="container">
+    <h1>When you're in a jam and need to find a musician to fill in, Band Shack has your back.</p>
+    <%= link_to "Check out the musicians", offerings_path(@offering), class: "btn btn-primary" %>
+  </div>
+</div>
