added adjustments to show page

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -95,19 +95,13 @@
 .card-show-page-booking {
   margin: 16px;
   padding: 16px;
-  height: 50%
+  height: 60%
 }
 
 #booking-title {
   text-align: center;
   font-size: 32px;
-  height: 80px;
-}
-
-#booking-date {
-  text-align: center;
-  font-size: 24px;
-  height: 80px;
+  height: 32px;
 }
 
 #bookit-button {
@@ -115,4 +109,8 @@
   justify-content: center;
   align-items: center;
   top: 50%;
+}
+
+#button-form {
+  text-align: center;
 }
