--- a/app/views/shared/_new_booking_form.html.erb
+++ b/app/views/shared/_new_booking_form.html.erb
@@ -1,5 +1,11 @@
-<%= simple_form_for [@offering, @booking] do |f| %>
-  <%= f.input :start_date %>
-  <%= f.input :end_date %>
-  <%= f.submit "Submit", class: "btn btn-primary" %>
+
+<div class="container bg-light p-3">
+  <%= simple_form_for [@offering, @booking] do |f| %>
+  <%= f.input :start_date, as: :datetime, discard_minute: true %>
+  <%= f.input :end_date,  as: :datetime, discard_minute: true %>
+  <div class="">
+    <%= f.input :details %>
+    <%= f.submit :submit, class: "btn btn-primary" %>
+  </div>
 <% end %>
+</div>
