added video code

--- a/app/views/offerings/show.html.erb
+++ b/app/views/offerings/show.html.erb
@@ -7,7 +7,7 @@
       <div class="row">
         <div class="col">
           <div class="card-trip card-show-page">
-            <img src="https://roadtovrlive-5ea0.kxcdn.com/wp-content/uploads/2015/03/youtube-logo2.jpg" />
+            <iframe src="https://www.youtube.com/embed/tgbNymZ7vqY" width="480" height="240" frameborder="0" allowfullscreen> </iframe>
             <div class="card-trip-infos">
               <div>
                 <h2><%= @offering.user.full_name %></h2>
