--- a/app/views/offerings/_form.html.erb
+++ b/app/views/offerings/_form.html.erb
@@ -1,4 +1,5 @@
 <%= simple_form_for @offering do |f| %>
   <%= f.input :price %>
+  <%= f.input :photo, as: :file %>
   <%= f.submit "Search", class: 'btn btn-primary mt-2' %>
 <% end %>
