Minor changes to style

--- a/app/views/offerings/index.html.erb
+++ b/app/views/offerings/index.html.erb
@@ -1,5 +1,5 @@
 <div class="container mt-3">
-  <h1>Musician</h1>
+  <h1>Musicians</h1>
   <%= render "search" %>
   <div class="cards">
     <% @offerings.each do |offering| %>
