--- a/app/views/shared/_new_booking_form.html.erb
+++ b/app/views/shared/_new_booking_form.html.erb
@@ -4,7 +4,6 @@
     <%= f.input :end_date,  as: :datetime, discard_minute: true %>
     <div class="">
       <%= f.input :details %>
-      <div id="button-form"><%= f.submit "Get Estimate", class: "btn btn-primary" %>
-      </div>
+      <%= f.submit class: "btn btn-primary" %>
+    </div>
     <% end %>
-  </div>
