--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -11,11 +11,16 @@
         <li class="nav-item">
           <a class="nav-link" href="#">Find the Gigs</a>
         </li>
+        <% if user_signed_in? %>
+          <li class="nav-item d-flex align-items-center fw-light me-2">
+            Hi, <%= current_user.full_name.split.first %>
+          </li>
+        <% end %>
         <li class="nav-item dropdown">
           <img class="avatar dropdown-toggle" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" src="<%=image_path "avartar.svg" %>" />
           <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="#">Action</a>
-            <a class="dropdown-item" href="#">Another action</a>
+            <%= link_to "Sign in", user_session_path, class: "dropdown-item" %>
+            <%= link_to "Register", new_user_registration_path, class: "dropdown-item" %>
             <a class="dropdown-item" data-turbo-method="delete" href="#">Log out</a>
           </div>
         </li>
