changes to booking form

--- a/app/views/offerings/show.html.erb
+++ b/app/views/offerings/show.html.erb
@@ -31,8 +31,9 @@
   </div>
   <div class="card-trip card-show-page-booking">
     <div class="col-12">
-      <h2 id= "booking-title">Make a booking</h2>
-      <%= render 'shared/new_booking_form' %>
+      <h2 id= "booking-title" class="my-2">Book me!</h2>
+      <%= render 'shared/new_booking_form'  %>
     </div>
+
   </div>
 </div>
