--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -2,7 +2,7 @@
   position: absolute;
   top: 0;
   bottom: 0;
-  width: 100%
+  width: 100%;
 }
 
 .card-trip {
@@ -10,6 +10,7 @@
   background: white;
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
   position: relative;
+  border-radius: 8px;
 }
 
 .card-trip>img {
