--- a/app/views/offerings/show.html.erb
+++ b/app/views/offerings/show.html.erb
@@ -1,5 +1,5 @@
 <div class="container mt-3">
-  <h1>This is the Offering Headline</h1>
+  <h1><%= @offering.user.full_name %>'s Profile</h1>
 </div>
 <div class="container show-main mt-3">
   <div>
