added the new style to navbar

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,16 +1,16 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
   <div class="container-fluid">
-    <%= link_to offerings_path, class: "navbar-brand"  do %>
-      <%= image_tag "band2.jpg" %>
-    <% end %>
+    <div class="d-flex align-items-center">
+      <%= link_to offerings_path, class: "navbar-brand"  do %>
+        <%= image_tag "band2.jpg" %>
+      <% end %>
+      <div class="fs-3" text_center>Find the Gigs</div>
+    </div>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto">
-        <li class="nav-item">
-          <a class="nav-link" href="#">Find the Gigs</a>
-        </li>
         <% if user_signed_in? %>
           <li class="nav-item d-flex align-items-center fw-light me-2">
             Hi, <%= current_user.full_name.split.first %>
