--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -4,7 +4,7 @@
       <%= link_to offerings_path, class: "navbar-brand"  do %>
         <%= image_tag "band2.jpg" %>
       <% end %>
-      <div class="fs-3" text_center>Find the Gigs</div>
+      <div class="fs-3" text_center>Bandshake</div>
     </div>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
