--- a/app/views/offerings/show.html.erb
+++ b/app/views/offerings/show.html.erb
@@ -13,7 +13,7 @@
                 <h2><%= @offering.user.full_name %></h2>
                 <%= @offering.user.experience %>
               </div>
-              <h2 class="card-trip-pricing">From <%= @offering.price %>$</h2>
+              <h2 class="card-trip-pricing"> <%= @offering.price %>¥</h2>
             </div>
           </div>
         </div>
@@ -34,6 +34,5 @@
       <h2 id= "booking-title" class="my-2">Book me!</h2>
       <%= render 'shared/new_booking_form'  %>
     </div>
-
   </div>
 </div>
