--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,4 +1,4 @@
-<div class = "container pt-3">
+<div class = "container-bookings pt-3">
   <ul class="list-inline tabs-underlined">
     <li>
       <a href="#" class="tab-underlined">My Gigs</a>
@@ -20,16 +20,7 @@
               <div class="card border-0">Status</div>
             </li>
             <% @bookings.each do |booking| %>
-              <li class="list-group-item d-flex justify-content-between">
-                <div class="img-container" style="max-width 25%">
-                  <img src="https://example.com/image.jpg" class="img-fluid">
-                </div>
-                <div class="card border-0"><%= booking.offering.user.full_name %></div>
-                <div class="card border-0"><%= booking.start_date.strftime("%b %d %-l%P") %></div>
-                <div class="card border-0"><%= booking.end_date.strftime("%b %d %-l%P") %></div>
-                <div class="btn btn-warning border-0"><%= booking.status %></div>
-              </li>
-              <li class="list-group-item">Details: <%= booking.details %></li>
+              <%= render 'booking', booking: booking %>
             <% end %>
           </ul>
         </div>
