--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
   </head>
   <body>
     <%= render "shared/navbar" %>
+    <%= render "shared/flashes" %>
     <%= yield %>
     <%= render "shared/footer" %>
   </body>
