--- a/app/views/offerings/index.html.erb
+++ b/app/views/offerings/index.html.erb
@@ -1,5 +1,13 @@
 <div class="container mt-3">
-  <h1>Musicians</h1>
+  <div class="d-flex justify-content-between align-items-center">
+    <h1>Musicians</h1>
+    <div data-controller="toggle">
+      <button data-action="click->toggle#fire" class="btn btn-outline-primary">Add a new offer</button>
+      <div data-toggle-target="togglableElement" class="d-none">
+        <%= render "offerings/form", offering: Offering.new %>
+      </div>
+    </div>
+  </div>
   <%= render "search" %>
   <div class="cards">
     <% @offerings.each do |offering| %>
