--- a/app/views/offerings/show.html.erb
+++ b/app/views/offerings/show.html.erb
@@ -7,7 +7,7 @@
       <div class="row">
         <div class="col">
           <div class="card-trip card-show-page">
-            <iframe src="https://www.youtube.com/embed/tgbNymZ7vqY" width= 100% height="300" frameborder="0" allowfullscreen> </iframe>
+            <iframe src="<%= @offering.url %>" width= 100% height="300" frameborder="0" allowfullscreen> </iframe>
             <div class="card-trip-infos">
               <div>
                 <h2><%= @offering.user.full_name %></h2>
