--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -6,27 +6,28 @@
       <% end %>
       <div class="fs-3" text_center>Bandshake</div>
     </div>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto">
-        <% if user_signed_in? %>
-          <li class="nav-item d-flex align-items-center fw-light me-2">
-            Hi, <%= current_user.full_name.split.first %>
-          </li>
-        <% end %>
-        <li class="nav-item dropdown">
-          <img class="avatar dropdown-toggle" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" src="<%=image_path "avartar.svg" %>" />
-          <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-            <%= link_to "Sign in", user_session_path, class: "dropdown-item" %>
-            <%= link_to "Register", new_user_registration_path, class: "dropdown-item" %>
-            <a class="dropdown-item" data-turbo-method="delete" href="#">Log out</a>
-          </div>
-        </li>
-        <!--li class="nav-item"-->
-        <!--/li-->
-      </ul>
-    </div>
   </div>
+  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav me-auto">
+      <% if user_signed_in? %>
+        <li class="nav-item d-flex align-items-center fw-light me-2 text-nowrap">
+          Hi, <%= current_user.full_name.split.first %>
+        </li>
+      <% end %>
+      <li class="nav-item dropdown">
+        <img class="avatar dropdown-toggle" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" src="<%=image_path "avartar.svg" %>" />
+        <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
+          <%= link_to "Sign in", user_session_path, class: "dropdown-item" %>
+          <%= link_to "Register", new_user_registration_path, class: "dropdown-item" %>
+          <a class="dropdown-item" data-turbo-method="delete" href="#">Log out</a>
+        </div>
+      </li>
+      <!--li class="nav-item"-->
+      <!--/li-->
+    </ul>
+  </div>
+</div>
 </div>
