--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -20,9 +20,12 @@
       <li class="nav-item dropdown">
         <img class="avatar dropdown-toggle" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" src="<%=image_path "avartar.svg" %>" />
         <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-          <%= link_to "Sign in", user_session_path, class: "dropdown-item" %>
-          <%= link_to "Register", new_user_registration_path, class: "dropdown-item" %>
-          <a class="dropdown-item" data-turbo-method="delete" href="#">Log out</a>
+          <% if user_signed_in? %>
+            <%= link_to"logout", destroy_user_session_path, data: {turbo_method: :delete}, class: "dropdown-item"%>
+          <% else %>
+            <%= link_to "Sign in", user_session_path, class: "dropdown-item" %>
+            <%= link_to "Register", new_user_registration_path, class: "dropdown-item" %>
+          <% end %>
         </div>
       </li>
       <!--li class="nav-item"-->
