added minor css stuff

--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -7,7 +7,7 @@
 <div class="tab-content" id="nav-tabContent">
   <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
     <%# This is the beginning div of the My Bookings block of content %>
-    <div class = "container-bookings pt-3">
+    <div class = "container-bookings">
       <div class="container-table">
         <div class="row">
           <div class="col-md-12">
@@ -34,7 +34,7 @@
   <%# This is a separator comment to make things easier to see%>
   <div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab">
     <%# The content for the second block of info (My Gigs) is from here%>
-    <div class = "container-bookings pt-3">
+    <div class = "container-bookings">
       <div class="container-table">
         <div class="row">
           <div class="col-md-12">
