--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -22,13 +22,15 @@
           Hi, <%= current_user.full_name.split.first %>
         </li>
       <% end %>
+
       <li class="nav-item dropdown">
         <%# <img class="avatar dropdown-toggle" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" %>
         <% if user_signed_in? %>
-          <%= cl_image_tag current_user.photo.key, height: 100, width: 100, crop: :fit, class: "avatar dropdown-toggle" %>
+          <%= cl_image_tag current_user.photo.key, 'data-bs-toggle': 'dropdown', height: 100, width: 100, crop: :fit, class: "avatar dropdown-toggle" %>
         <% else %>
           <img class="avatar dropdown-toggle" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" src="<%=image_path "avartar.svg" %>" />
         <% end %>
+
         <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
           <% if user_signed_in? %>
             <%= link_to"logout", destroy_user_session_path, data: {turbo_method: :delete}, class: "dropdown-item"%>
@@ -36,6 +38,7 @@
             <%= link_to "Sign in", user_session_path, class: "dropdown-item" %>
             <%= link_to "Register", new_user_registration_path, class: "dropdown-item" %>
           <% end %>
+
         </div>
       </li>
       <!--li class="nav-item"-->
