--- a/app/views/offerings/index.html.erb
+++ b/app/views/offerings/index.html.erb
@@ -9,7 +9,7 @@
     </div>
   </div>
   <%= render "search" %>
-  <div class="cards">
+  <div class="cards-index">
     <% @offerings.each do |offering| %>
       <div class="card-trip mt-5">
         <% if offering.photo.attached? %>
