--- a/app/views/offerings/show.html.erb
+++ b/app/views/offerings/show.html.erb
@@ -13,7 +13,7 @@
                 <h2><%= @offering.user.full_name %></h2>
                 <%= @offering.user.experience %>
               </div>
-              <h2 class="card-trip-pricing"> <%= @offering.price %>¥</h2>
+              <h2 class="card-trip-pricing"> ￥<%= @offering.price %></h2>
             </div>
           </div>
         </div>
