--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,4 +1,4 @@
-<div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
+<div class="navbar navbar-expand-sm navbar-light navbar-lewagon px-3">
   <div class="container-fluid">
     <div class="d-flex align-items-center">
       <%= link_to offerings_path, class: "navbar-brand"  do %>
@@ -14,7 +14,7 @@
     <ul class="navbar-nav me-auto">
       <% if user_signed_in? %>
         <li class="nav-item d-flex align-items-center fw-light me-2 text-nowrap">
-          <%= link_to "My Gigs", bookings_path, class: "link-index" %>
+          <%= link_to "My Gigs", bookings_path, class: "link-index text-decoration-none" %>
         </li>
       <% end %>
       <% if user_signed_in? %>
@@ -22,7 +22,6 @@
           Hi, <%= current_user.full_name.split.first %>
         </li>
       <% end %>
-
       <li class="nav-item dropdown">
         <%# <img class="avatar dropdown-toggle" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" %>
         <% if user_signed_in? %>
@@ -30,7 +29,6 @@
         <% else %>
           <img class="avatar dropdown-toggle" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" src="<%=image_path "avartar.svg" %>" />
         <% end %>
-
         <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
           <% if user_signed_in? %>
             <%= link_to"logout", destroy_user_session_path, data: {turbo_method: :delete}, class: "dropdown-item"%>
@@ -38,7 +36,6 @@
             <%= link_to "Sign in", user_session_path, class: "dropdown-item" %>
             <%= link_to "Register", new_user_registration_path, class: "dropdown-item" %>
           <% end %>
-
         </div>
       </li>
       <!--li class="nav-item"-->
