added button for leaving review

--- a/app/views/bookings/_booking.html.erb
+++ b/app/views/bookings/_booking.html.erb
@@ -1,7 +1,10 @@
 <li class="list-group-item d-flex justify-content-between">
-  <div class="img-container" style="max-width 25%">
-    <img src="https://example.com/image.jpg" class="img-fluid">
-  </div>
+  <%#   <% if booking.status == "accepted" && booking.end_date <= Time.now %>
+  <%#  <%= link_to "Leave a review", reviews_path(@review), class: "btn btn-primary" %>
+  <%#  <% else %>
+  <%#  Too soon
+  <% end %>
+  <div> <%= link_to "Leave a review", offerings_path(@offering), class: "btn btn-primary" %> </div>
   <div class="card border-0"><%= booking.offering.user.full_name %></div>
   <div class="card border-0"><%= booking.start_date.strftime("%b %d %-l%P") %></div>
   <div class="card border-0"><%= booking.end_date.strftime("%b %d %-l%P") %></div>
