--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -14,7 +14,7 @@
             <div class="card text-center shadow">
               <ul class="list-group">
                 <li class="list-group-item d-flex justify-content-between">
-                  <div class="card border-0"></div>
+                  <div class="card border-0">Review</div>
                   <div class="card border-0">Name</div>
                   <div class="card border-0">Start Date</div>
                   <div class="card border-0">End Date</div>
