reviews added to the back end

--- a/app/views/bookings/_booking.html.erb
+++ b/app/views/bookings/_booking.html.erb
@@ -1,5 +1,5 @@
 <li class="list-group-item d-flex justify-content-between">
-  <div class="img-container" style="max-width 25%">
+  <div class="img-container" style="max-width: 25%">
     <img src="https://example.com/image.jpg" class="img-fluid">
   </div>
   <div class="card border-0"><%= booking.offering.user.full_name %></div>
