changed the searchbar, as well as making the cards fit properly on offerings show and index.

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -14,7 +14,7 @@
     <ul class="navbar-nav me-auto">
       <% if user_signed_in? %>
         <li class="nav-item d-flex align-items-center fw-light me-2 text-nowrap">
-          <%= link_to "My Gigs", bookings_path, class: "link-index text-decoration-none" %>
+          <%= link_to "♫", bookings_path, class: "link-index text-decoration-none", style: "color: #454F5C" %>
         </li>
       <% end %>
       <% if user_signed_in? %>
