--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -127,14 +127,14 @@ body {
   margin: 0;
   padding: 0;
   // background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url('https://i.redd.it/p8tohyn245b61.png');
-  background-color: $blue;
+  background-color: #9ab6bc;
   background-size: cover;
   background-repeat: no-repeat;
   min-height: 100vh;
   /* Ensure the background covers the entire viewport height */
 }
 
-.container {
+.card-container {
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   background-color: rgba(255, 255, 255, 0.2);
   backdrop-filter: blur(3px);
@@ -145,5 +145,5 @@ body {
   padding-left: 30px;
   padding-right: 30px;
   padding-bottom: 40px;
-  margin-top: 20px;
+  margin: 20px 35.5px;
 }
