--- a/app/views/offerings/_search.html.erb
+++ b/app/views/offerings/_search.html.erb
@@ -3,10 +3,10 @@
     <%= form_with url: offerings_path, method: :get, class: "d-flex" do %>
       <%= text_field_tag :query,
             params[:query],
-            class: "form-control",
-            placeholder: "Type a keyword"
+            class: "form-control searchbar",
+            placeholder: "instrument or location"
         %>
-      <%= submit_tag "Search", name: "", class: "btn btn-primary" %>
+      <%# <%= submit_tag "Search", name: "", class: "btn btn-primary" %>
     <% end %>
   </div>
 </div>
