--- a/app/views/offerings/index.html.erb
+++ b/app/views/offerings/index.html.erb
@@ -1,4 +1,4 @@
-<div class="container mt-3">
+<div class="card-container mt-3">
   <div class="d-flex justify-content-between align-items-center">
     <h1>Musicians</h1>
     <div data-controller="toggle">
