--- a/app/views/offerings/show.html.erb
+++ b/app/views/offerings/show.html.erb
@@ -1,7 +1,7 @@
-<div class="container mt-3">
+<div class="card-container mt-3">
   <h1><%= @offering.user.full_name %>'s Profile</h1>
 </div>
-<div class="container show-main mt-3">
+<div class="card-container show-main mt-3">
   <div>
     <div class="cards-show">
       <div class="row">
