--- a/app/views/bookings/_booking.html.erb
+++ b/app/views/bookings/_booking.html.erb
@@ -7,7 +7,11 @@
   <%#  <% else %>
   <%#  Too soon
   <% end %>
-  <div> <%= link_to "Leave a review", offerings_path(@offering), class: "btn btn-primary" %> </div>
+  <!-- <div> <button class="btn btn-primary" >leave a review</button> </div> -->
+  <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#review-<%= booking.id%>">
+    Leave a review
+  </button>
+  <div> <%= render 'reviews/new_review', booking: booking %></div>
   <div class="card border-0"><%= booking.offering.user.full_name %></div>
   <div class="card border-0"><%= booking.start_date.strftime("%b %d %-l%P") %></div>
   <div class="card border-0"><%= booking.end_date.strftime("%b %d %-l%P") %></div>
