background color change

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,3 +12,5 @@
 @import "pages/index";
 @import "pages/bookings_index";
 @import "components/searchbar";
+@import "components/form_input";
+@import "components/buttons"
