--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -127,7 +127,7 @@ body {
   margin: 0;
   padding: 0;
   // background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url('https://i.redd.it/p8tohyn245b61.png');
-  background-color: #9ab6bc;
+  background-color: #f0f0f0;
   background-size: cover;
   background-repeat: no-repeat;
   min-height: 100vh;
@@ -137,7 +137,7 @@ body {
 .card-container {
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   background-color: rgba(255, 255, 255, 0.2);
-  backdrop-filter: blur(3px);
+  backdrop-filter: blur(8px);
   border: 0.5px solid white;
   border-radius: 15px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
