--- a/app/assets/stylesheets/components/_searchbar.scss
+++ b/app/assets/stylesheets/components/_searchbar.scss
@@ -2,6 +2,6 @@
   // box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   background-color: rgba(255, 255, 255, 0.299);
   backdrop-filter: blur(3px);
-  border: 0.5px solid white;
+  border: 0.5px solid #8AB2BB;
   border-radius: 15px;
 }
