--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -7,6 +7,7 @@
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   border-radius: 15px;
   margin-top: 20px;
+  margin-bottom: 20px;
   width: 95%;
   margin-left: auto;
   margin-right: auto;
