--- a/app/views/offerings/_form.html.erb
+++ b/app/views/offerings/_form.html.erb
@@ -1,4 +1,4 @@
-<div>
+<div class="form-card p-3 shadow rounded">
   <%# <h1>Add a new Offer</h1> %>
   <%= simple_form_for offering do |f| %>
     <%= f.input :instrument, collection: ['Piano', 'Acoustic Guitar', 'Electric guitar', 'Ukulele', 'Violin', 'Drums', 'Saxophone', 'Flute', 'Clarinet', 'Harp'], input_html:{ class: "input-box" }%>
