--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -13,7 +13,7 @@
           <div class="col-md-12">
             <div class="card text-center shadow">
               <ul class="list-group">
-                <li class="list-group-item d-flex justify-content-between">
+                <li class="list-group-item d-flex justify-content-around">
                   <div class="card border-0">Review</div>
                   <div class="card border-0">Name</div>
                   <div class="card border-0">Start Date</div>
